[zhengsuqin] fix: fix the function to change task styles when it has done

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -78,3 +78,9 @@ ol li span {
   border: 1px solid #f4ebeb;
   cursor: pointer;
 }
+
+.has-down {
+  text-decoration: line-through;
+  color: #999999;
+
+}
